columnate.css
html {
	height: 100%;
	/*width: min-content;*/

	padding: 0;
	margin: 0;
}

body {
	height: 100%;
	width: fit-content;

	margin: 0;
	padding: 0;
	
	column-fill: auto;
	column-width: 20em;
	column-count: auto;
	column-gap: 1.5em;
}

figure {
	padding: 0;
	margin: 0;
}

h1, h2, h3, h4, h5, h6, p, figcaption {
	padding-top: 16px;
	padding-left: 16px;
	margin-block-start: 0;
	margin-block-end: 0;
	margin-inline-start: 0;
	margin-inline-end: 0;
}

p, figcaption {
	line-height: 1.5em;
}

img {
	height: auto !important;
	max-width: 100%;
}

